Remove commons.lang3 workarounds.
The commons.lang3 library is no longer required with calimero-usb depending on io.calimero:usb4java-javax.